<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.eduardo.examenandroideduardocampos.MainActivity">

    <Button
        android:id="@+id/btnAnadir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="44dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="57dp"
        android:text="@string/btnAnadir" />

    <Button
        android:id="@+id/btnBorrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnAnadir"
        android:layout_alignStart="@+id/btnAnadir"
        android:layout_below="@+id/btnAnadir"
        android:layout_marginTop="28dp"
        android:text="@string/btnBuscar" />

    <Button
        android:id="@+id/btnTodos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnBorrar"
        android:layout_alignStart="@+id/btnBorrar"
        android:layout_below="@+id/btnBorrar"
        android:layout_marginTop="30dp"
        android:text="@string/btnTodos" />

    <TextView
        android:id="@+id/txtTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnTodos"
        android:layout_alignStart="@+id/btnTodos"
        android:layout_below="@+id/btnTodos"
        android:layout_marginTop="42dp" />
</RelativeLayout>
